chenging Field Injection in pong and arkanoid to Constructor Injection, removing unnecesary files and comments